--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
